--- a/index.html
+++ b/index.html
@@ -27,145 +27,317 @@
     ></script>
     <!-- plotly -->
     <script src="https://cdn.plot.ly/plotly-2.0.0.min.js"></script>
-
-    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <div class="container">
-      <div class="row mt-5">
-        <!-- Форма -->
-        <div class="col-4">
-          <!-- Длина волны -->
-          <div class="row d-flex justify-content-between mb-2">
-            <div class="col-auto">
-              <label for="wave-length" class="col-form-label">
-                Длина волны
-              </label>
-            </div>
+      <!-- Вкладки -->
+      <ul class="nav nav-tabs mt-3" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link active"
+            id="table-data-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#table-data"
+            type="button"
+            role="tab"
+            aria-controls="table-data"
+            aria-selected="true"
+          >
+            Табличные данные
+          </button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button
+            class="nav-link"
+            id="manual-tab"
+            data-bs-toggle="tab"
+            data-bs-target="#manual"
+            type="button"
+            role="tab"
+            aria-controls="manual"
+            aria-selected="false"
+          >
+            Ручной ввод
+          </button>
+        </li>
+      </ul>
 
-            <div class="col-auto">
-              <select id="wave-length" class="form-select">
-                <option value="1310" selected>1310 нм</option>
-                <option value="1550">1550 нм</option>
-                <option value="1625">1625 нм</option>
-              </select>
-            </div>
-          </div>
+      <!-- Контент для расчета на основе табличных данных -->
+      <div class="tab-content" id="myTabContent">
+        <div
+          class="tab-pane fade show active"
+          id="table-data"
+          role="tabpanel"
+          aria-labelledby="table-data-tab"
+        >
+          <div class="row mt-5">
+            <!-- Форма -->
+            <div class="col-4">
+              <!-- Длина волны -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="wave-length" class="col-form-label">
+                    Длина волны
+                  </label>
+                </div>
 
-          <!-- 45 градусов -->
-          <div class="row d-flex justify-content-between mb-2">
-            <div class="col-auto">
-              <label for="45degInput" class="col-form-label">45 град</label>
-            </div>
-            <div class="col-auto">
-              <div class="d-flex align-items-center">
-                <div class="form-check form-switch">
+                <div class="col-auto">
+                  <select id="wave-length" class="form-select">
+                    <option value="1310" selected>1310 нм</option>
+                    <option value="1550">1550 нм</option>
+                    <option value="1625">1625 нм</option>
+                  </select>
+                </div>
+              </div>
+
+              <!-- 45 градусов -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="45degInput" class="col-form-label">45 град</label>
+                </div>
+                <div class="col-auto">
+                  <div class="d-flex align-items-center">
+                    <div class="form-check form-switch">
+                      <input
+                        id="45degSwitch"
+                        class="form-check-input"
+                        type="checkbox"
+                        checked
+                      />
+                    </div>
+                    <input
+                      type="number"
+                      value="0"
+                      id="45degInput"
+                      class="form-control"
+                      min="0"
+                      max="7"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- 90 градусов -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="90degInput" class="col-form-label">90 град</label>
+                </div>
+                <div class="col-auto">
+                  <div class="d-flex align-items-center">
+                    <div class="form-check form-switch">
+                      <input
+                        id="90degSwitch"
+                        class="form-check-input"
+                        type="checkbox"
+                        checked
+                      />
+                    </div>
+                    <input
+                      type="number"
+                      value="0"
+                      id="90degInput"
+                      class="form-control"
+                      min="0"
+                      max="7"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- 135 градусов -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="135degInput" class="col-form-label"
+                    >135 град</label
+                  >
+                </div>
+                <div class="col-auto">
+                  <div class="d-flex align-items-center">
+                    <div class="form-check form-switch">
+                      <input
+                        id="135degSwitch"
+                        class="form-check-input"
+                        type="checkbox"
+                        onchange="handleToggleInput"
+                        checked
+                      />
+                    </div>
+                    <input
+                      type="number"
+                      value="0"
+                      id="135degInput"
+                      class="form-control"
+                      min="0"
+                      max="7"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- Линейная аппроксимация -->
+              <div class="row d-flex flex-column mb-2">
+                <div class="col-auto">
+                  <label class="col-form-label">
+                    Линейная аппроксимация (R2)
+                  </label>
+                </div>
+                <div class="col-auto">
                   <input
-                    id="45degSwitch"
-                    class="form-check-input"
-                    type="checkbox"
-                    checked
+                    id="linear-approximation"
+                    class="form-control"
+                    disabled
                   />
                 </div>
-                <input
-                  type="number"
-                  value="0"
-                  id="45degInput"
-                  class="form-control"
-                  min="0"
-                  max="7"
-                />
+              </div>
+
+              <!-- Кнопки -->
+              <div class="d-grid gap-2 mt-4">
+                <button
+                  type="button"
+                  class="btn btn-outline-warning"
+                  onclick="generateRandomValues()"
+                >
+                  Сгенерировать случайные значения
+                </button>
+
+                <button
+                  type="button"
+                  class="btn btn-outline-danger"
+                  onclick="resetValues()"
+                >
+                  Сбросить значения
+                </button>
+
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  onclick="calculateAndDraw()"
+                >
+                  Рассчитать
+                </button>
               </div>
             </div>
-          </div>
 
-          <!-- 90 градусов -->
-          <div class="row d-flex justify-content-between mb-2">
-            <div class="col-auto">
-              <label for="90degInput" class="col-form-label">90 град</label>
+            <!-- График -->
+            <div class="col-8 border border-info border-2 rounded-3">
+              <div id="table-data-graph"></div>
             </div>
-            <div class="col-auto">
-              <div class="d-flex align-items-center">
-                <div class="form-check form-switch">
-                  <input
-                    id="90degSwitch"
-                    class="form-check-input"
-                    type="checkbox"
-                    checked
-                  />
-                </div>
-                <input
-                  type="number"
-                  value="0"
-                  id="90degInput"
-                  class="form-control"
-                  min="0"
-                  max="7"
-                />
-              </div>
-            </div>
-          </div>
-
-          <!-- 135 градусов -->
-          <div class="row d-flex justify-content-between mb-2">
-            <div class="col-auto">
-              <label for="135degInput" class="col-form-label">135 град</label>
-            </div>
-            <div class="col-auto">
-              <div class="d-flex align-items-center">
-                <div class="form-check form-switch">
-                  <input
-                    id="135degSwitch"
-                    class="form-check-input"
-                    type="checkbox"
-                    onchange="handleToggleInput"
-                    checked
-                  />
-                </div>
-                <input
-                  type="number"
-                  value="0"
-                  id="135degInput"
-                  class="form-control"
-                  min="0"
-                  max="7"
-                />
-              </div>
-            </div>
-          </div>
-
-          <!-- Линейная аппроксимация -->
-          <div class="row d-flex flex-column mb-2">
-            <div class="col-auto">
-              <label class="col-form-label">
-                Линейная аппроксимация
-              </label>
-            </div>
-            <div class="col-auto">
-              <input id="linear-approximation" class="form-control" disabled />
-            </div>
-          </div>
-
-          <!-- Кнопки -->
-          <div class="d-grid gap-2 mt-4">
-            <button type="button" class="btn btn-outline-warning" onclick="generateRandomValues()">
-              Сгенерировать случайные значения
-            </button>
-
-            <button type="button" class="btn btn-outline-danger" onclick="resetValues()">
-              Сбросить значения
-            </button>
-
-            <button type="button" class="btn btn-primary" onclick="calculateAndDraw()">Рассчитать</button>
           </div>
         </div>
 
-        <!-- График -->
-        <div class="col-8 border border-info border-2 rounded-3">
-          <div id="graph"></div>
+        <!-- Контент для расчета на основе ручного ввода данных -->
+        <div
+          class="tab-pane fade"
+          id="manual"
+          role="tabpanel"
+          aria-labelledby="manual-tab"
+        >
+          <div class="row mt-5">
+            <!-- Форма -->
+            <div class="col-4">
+              <div class="row mb-2">
+                <p class="fw-bold fs-5">
+                  Линейная регрессия: &nbsp;<code>f(x) = a * x + b</code>
+                </p>
+              </div>
+
+              <!-- Коэффициент А -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="coefA" class="col-form-label"
+                    >Коэффициент А</label
+                  >
+                </div>
+                <div class="col-auto">
+                  <div class="d-flex align-items-center">
+                    <input
+                      type="number"
+                      value="0"
+                      id="coefA"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- Коэффициент B -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="coefB" class="col-form-label"
+                    >Коэффициент B</label
+                  >
+                </div>
+                <div class="col-auto">
+                  <div class="d-flex align-items-center">
+                    <input
+                      type="number"
+                      value="0"
+                      id="coefB"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- X -->
+              <div class="row d-flex justify-content-between mb-2">
+                <div class="col-auto">
+                  <label for="valX" class="col-form-label">Значение X</label>
+                </div>
+                <div class="col-auto">
+                  <div class="d-flex align-items-center">
+                    <input
+                      type="number"
+                      value="0"
+                      id="valX"
+                      class="form-control"
+                    />
+                  </div>
+                </div>
+              </div>
+
+              <!-- Кнопки -->
+              <div class="d-grid gap-2 mt-4">
+                <button type="button" class="btn btn-outline-info">
+                  Добавить X
+                </button>
+
+                <button type="button" class="btn btn-outline-danger">
+                  Сбросить значения
+                </button>
+
+                <button type="button" class="btn btn-primary">
+                  Рассчитать
+                </button>
+              </div>
+            </div>
+
+            <!-- График -->
+            <div class="col-8 border border-info border-2 rounded-3">
+              <div id="manual-graph"></div>
+            </div>
+          </div>
+
+          <div class="row mt-2">
+            <!-- Таблица  -->
+            <div class="col-4">
+              <table class="table table-bordered table-sm" id="table">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">X</th>
+                    <th scope="col">Y</th>
+                  </tr>
+                </thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+    <script src="shared.js" defer></script>
+    <script src="table-data.js"></script>
+    <!-- <script src="manual.js"></script> -->
   </body>
 </html>
