--- a/index.html
+++ b/index.html
@@ -7,26 +7,11 @@
     <meta content="width=device-width, initial-scale=1" name="viewport" />
 
     <!-- Bootstrap 5 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-    <!-- Popper.js -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-      integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-      crossorigin="anonymous"
-    ></script>
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <!-- Bootstrap scripts -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"
-      integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT"
-      crossorigin="anonymous"
-    ></script>
+    <script src="libs/bootstrap.min.js"></script>
     <!-- plotly -->
-    <script src="https://cdn.plot.ly/plotly-2.0.0.min.js"></script>
+    <script src="libs/plotly-2.0.0.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -183,7 +168,7 @@
                 </div>
                 <div class="col-auto">
                   <input
-                    id="linear-approximation"
+                    id="table-data-linear-approximation"
                     class="form-control"
                     disabled
                   />
@@ -203,7 +188,7 @@
                 <button
                   type="button"
                   class="btn btn-outline-danger"
-                  onclick="resetValues()"
+                  onclick="resetValuesT()"
                 >
                   Сбросить значения
                 </button>
@@ -211,7 +196,7 @@
                 <button
                   type="button"
                   class="btn btn-primary"
-                  onclick="calculateAndDraw()"
+                  onclick="calculateAndDrawT()"
                 >
                   Рассчитать
                 </button>
@@ -291,22 +276,51 @@
                       value="0"
                       id="valX"
                       class="form-control"
+                      onkeydown="if (event.keyCode == 13) {addValues()}"
                     />
                   </div>
                 </div>
               </div>
 
+              <!-- Линейная аппроксимация -->
+              <div class="row d-flex flex-column mb-2">
+                <div class="col-auto">
+                  <label class="col-form-label">
+                    Линейная аппроксимация (R2)
+                  </label>
+                </div>
+                <div class="col-auto">
+                  <input
+                    id="manual-linear-approximation"
+                    class="form-control"
+                    disabled
+                  />
+                </div>
+              </div>
+
               <!-- Кнопки -->
               <div class="d-grid gap-2 mt-4">
-                <button type="button" class="btn btn-outline-info">
+                <button
+                  type="button"
+                  class="btn btn-outline-info"
+                  onclick="addValues()"
+                >
                   Добавить X
                 </button>
 
-                <button type="button" class="btn btn-outline-danger">
+                <button
+                  type="button"
+                  class="btn btn-outline-danger"
+                  onclick="resetValuesM()"
+                >
                   Сбросить значения
                 </button>
 
-                <button type="button" class="btn btn-primary">
+                <button
+                  type="button"
+                  class="btn btn-primary"
+                  onclick="drawManualGraph()"
+                >
                   Рассчитать
                 </button>
               </div>
@@ -321,23 +335,30 @@
           <div class="row mt-2">
             <!-- Таблица  -->
             <div class="col-4">
-              <table class="table table-bordered table-sm" id="table">
+              <table
+                class="table table-bordered table-sm"
+                style="text-align: center"
+              >
                 <thead>
                   <tr>
                     <th scope="col">#</th>
+                    <th scope="col">a</th>
+                    <th scope="col">b</th>
                     <th scope="col">X</th>
                     <th scope="col">Y</th>
+                    <th scope="col">Удалить</th>
                   </tr>
                 </thead>
-                <tbody></tbody>
+                <tbody id="table-body"></tbody>
               </table>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="shared.js" defer></script>
-    <script src="table-data.js"></script>
-    <!-- <script src="manual.js"></script> -->
+
+    <script src="js/shared.js" defer></script>
+    <script src="js/table-data.js"></script>
+    <script src="js/manual.js"></script>
   </body>
 </html>
